# palautusrepositoro

./: .gitignore  README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: .coverage  statisticsservice_test.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: interactive_console_output.xml  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
